deps/crates/vendor/serde_json/tests/ui/unexpected_colon.stderr
error: no rules expected `:`
 --> tests/ui/unexpected_colon.rs:4:13
  |
4 |     json!({ : true });
  |             ^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
